--- a/ZeiterfassungPierburg/Views/Shared/Error.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/Error.cshtml
@@ -1,7 +1,6 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-    Layout = "";
     ViewBag.Title = "Error";
 }
 
@@ -11,7 +10,7 @@
         <h2 class="headline text-red">☹</h2>
 
         <div class="error-content">
-            <h3><i class="fa fa-warning text-red"></i> Uuups, das ist nicht gelungen. Wahrscheinlich existiert die Seite nicht.</h3>
+            <h3> Uuups, das ist nicht gelungen. Wahrscheinlich existiert die Seite nicht.</h3>
 
             <p>
                 Falls du glaubst, dass etwas nicht stimmt, kontaktiere bitte den Administrator.
