--- a/ZeiterfassungPierburg/Views/Shared/ErrorAccessDenied.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/ErrorAccessDenied.cshtml
@@ -3,13 +3,18 @@
     ViewBag.Title = "Error";
 }
 
+<div class="alert-danger">
+    <p>&nbsp</p>
+</div>
+<title>@ViewBag.Title</title>
 <section class="content">
 
+
     <div class="error-page">
-        <h2 class="headline text-red">☹</h2>
+        <h6 class="headline text-red">☹</h6>
 
         <div class="error-content">
-            <h3><i class="fa fa-warning text-red"></i> Du hast keinen Zugriff auf diese Seite.</h3>
+            <h4><i class="fa fa-warning text-red"></i> Du hast keinen Zugriff auf diese Seite.</h4>
 
             <p>
                 Kontaktiere den Admin, um die Rechte zu bekommen.
