--- a/ZeiterfassungPierburg/Views/Home/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Home/Index.cshtml
@@ -25,8 +25,6 @@
     <!-- Small boxes (Stat box) -->
     <div class="row">
 
-
-
         <div class="col-lg-3 col-xs-6">
             <!-- small box -->
             <div class="small-box bg-aqua">
@@ -91,6 +89,7 @@
                 <a href="~/MitarbeiterInSchicht/Index" class="small-box-footer">zur Tabelle gehen <i class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
+
         <div class="col-lg-3 col-xs-6">
             <div class="box-footer text-black">
                 <h4 style="padding-bottom: 20px;">Produktivität im letzten Monat - Bänder</h4>
@@ -119,34 +118,19 @@
         </div>
 
 
-
-
         <div class="col-lg-6 col-xs-6">
 
-            <div class="row">
-                <div class="box-footer text-black">
-                    <h4>Produktivität der letzten 12 Monate</h4>
+            <div class="box-footer text-black">
+                <h4>Produktivität der letzten 12 Monate</h4>
 
-                    <div class="row">
-                        <canvas id="bar-chart" width="800" height="450"></canvas>
-                    </div>
-                </div>
+                <canvas id="bar-chart" width="700" height="330"></canvas>
             </div>
-            <hr />
-            <div class="row">
-                <div class="box-footer text-black">
-                    <h4>Placeholder for Pronom</h4>
-
-                    <div class="row">
-                        <iframe src="https://de.wikipedia.org/wiki/Rheinmetall_Automotive" width="100%" height="400" name="SELFHTML_in_a_box"></iframe>
-                    </div>
-                </div>
-            </div>
-
         </div>
-        <!-- ./col -->
-        <!-- ./col -->
-        <div class="col-lg-3 col-xs-6">
+
+
+
+
+        <div class="col-lg-3 col-xs-6" id="stückFrame">
             <div class="box-footer text-black">
                 <h4>Statistik der Stücke:</h4>
 
@@ -179,15 +163,32 @@
                                 <h5><span id="day6"></span><span class="pull-right"> <span class="label label-warning"> @ViewBag.StückeMinusSixDays</span> </span></h5>
                             </div>
 
-
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
+        <div class="col-lg-9 col-xs-9">
 
+
+            <div class="box-footer text-black">
+                <h4>Placeholder for Pronom</h4>
+
+                <div class="row">
+                    <iframe src="https://de.wikipedia.org/wiki/Rheinmetall_Automotive" width="100%" height="400" name="SELFHTML_in_a_box"></iframe>
+                </div>
+            </div>
+        </div>
     </div>
+
+
+
+    <!-- ./col -->
+    <!-- ./col -->
+
+
+
 
 
 
