--- a/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
@@ -83,6 +83,8 @@
                             <li>@Html.ActionLink("Fertigungsteile", "Index", "Fertigungsteil")</li>
                             <li>@Html.ActionLink("Mitarbeiter", "Index", "Mitarbeiter")</li>
                             <li>@Html.ActionLink("Teile bei Anlagen", "Index", "TeileInProduktionsanlage")</li>
+                            <li>@Html.ActionLink("Produktivität", "Create", "Produktivität")</li>
+
                         </ul>
                         <!-- /.sidebar-menu -->
                     </section>
