--- a/ZeiterfassungPierburg/Views/Zugriffsrechte/Login.cshtml
+++ b/ZeiterfassungPierburg/Views/Zugriffsrechte/Login.cshtml
@@ -35,7 +35,7 @@
                 <div class="login-box-body">
                     <p class="login-box-msg"><big>Melde dich an.</big></p>
 
-                    <form action="../../index2.html" method="post">
+                    <form  method="post">
                         <div class="form-group has-feedback">
                             @Html.TextBoxFor(a => a.Benutzername, new { @class = "form-control", @placeholder = "Benutzername" })
                         </div>
@@ -43,11 +43,19 @@
                             @Html.PasswordFor(a => a.Password, new { @class = "form-control", @placeholder = "Passwort", @type = "password" })
                             <span class="glyphicon glyphicon-lock form-control-feedback"></span>
                         </div>
+                        @if (ViewBag.Login != null)
+                        {
+                            @ViewBag.Login
+                            <br />
+                            <br />
+                        }
                         <div class="row">
+
                             <div class="col-xs-8">
                             </div>
                             <!-- /.col -->
                             <div class="col-xs-4">
+
                                 <button type="submit" class="btn btn-primary btn-block btn-flat">Anmelden</button>
                             </div>
                             <!-- /.col -->
@@ -58,21 +66,7 @@
                 <!-- /.login-box-body -->
             </div>
         <!-- /.login-box -->
-        <!-- jQuery 3 -->
-        <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
-        <!-- Bootstrap 3.3.7 -->
-        <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-        <!-- iCheck -->
-        <script src="../../plugins/iCheck/icheck.min.js"></script>
-        <script>
-            $(function () {
-                $('input').iCheck({
-                    checkboxClass: 'icheckbox_square-blue',
-                    radioClass: 'iradio_square-blue',
-                    increaseArea: '20%' /* optional */
-                });
-            });
-        </script>
+
         </body>
     }
 }
