--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Edit.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ZeiterfassungPierburg.Models.MitarbeiterInSchicht
 
 <section class="content container-fluid">
- <h3>Bemerkung des/der Mitarbeiter/in ändern</h3>
+ <h3>Eintrag des/der Mitarbeiter/in ändern</h3>
     <div class="box box-info">
         <div class="box-body">
             <div class="form-horizontal">
@@ -18,25 +18,22 @@
                     @Html.HiddenFor(model => model.ProduktionsanlageID)
                     @Html.HiddenFor(model => model.FertigungsteilID)
 
-                    @Html.HiddenFor(model => model.Stück)
-                    @Html.HiddenFor(model => model.DirStunden)
-                    @Html.HiddenFor(model => model.InDirStunden)
                     @Html.HiddenFor(model => model.EingetragenVon)
                     @Html.HiddenFor(model => model.ErstelltAm)
 
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Stück, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-4">
-                            @Html.DisplayFor(model => model.Stück, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Stück, "", new { @class = "text-danger" })
-                        </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Stück, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-4">
+                        @Html.EditorFor(model => model.Stück, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Stück, "", new { @class = "text-danger" })
                     </div>
+                </div>
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.DirStunden, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-4">
-                            @Html.DisplayFor(model => model.DirStunden, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(model => model.DirStunden, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.DirStunden, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -44,7 +41,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.InDirStunden, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-4">
-                            @Html.DisplayFor(model => model.InDirStunden, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(model => model.InDirStunden, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.InDirStunden, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -78,7 +75,7 @@
                         </div>
                     </div>
                 }
-
+                @ViewBag.Message
                 <div>
                     @Html.ActionLink("Zurück zur Übersicht", "Index")
                 </div>
