--- a/ZeiterfassungPierburg/Views/NeueZeiterfassung/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/NeueZeiterfassung/Create.cshtml
@@ -13,7 +13,7 @@
         <div class="box box-info">
 
             <div class="box-body">
-                <h2>Neue Zeiterfassung</h2>
+                <h2>Neue Zeiterfassung - Montage</h2>
                 <!--<h5 style="padding-bottom: 25px; padding-top: 5px;">Hinweis: Dezimalzahlen müssen einen Punkt anstatt einer Komma benutzen.</h5>
                 -->
                 <div class="table-responsive">
