--- a/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
                     <section class="sidebar">
 
                         <ul class="sidebar-menu" data-widget="tree">
-                            <li>@Html.ActionLink("NEUE ERFASSUNG - Band", "Create", "Neuezeiterfassung")</li>
+                            <li>@Html.ActionLink("NEUE ERFASSUNG - Montage", "Create", "Neuezeiterfassung")</li>
                             <li>@Html.ActionLink("NEUE ERFASSUNG - MEBA", "CreateMEBA", "Neuezeiterfassung")</li>
                             _____________________________
 
@@ -168,7 +168,7 @@
                     <section class="sidebar">
 
                         <ul class="sidebar-menu" data-widget="tree">
-                            <li>@Html.ActionLink("NEUE ERFASSUNG - Band", "Create", "Neuezeiterfassung")</li>
+                            <li>@Html.ActionLink("NEUE ERFASSUNG - Montage", "Create", "Neuezeiterfassung")</li>
                             <li>@Html.ActionLink("NEUE ERFASSUNG - MEBA", "CreateMEBA", "Neuezeiterfassung")</li>
                             _____________________________
 
