--- a/ZeiterfassungPierburg/Views/Shared/_LayoutPublicWithoutMenu.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_LayoutPublicWithoutMenu.cshtml
@@ -56,7 +56,7 @@
 
             @RenderSection("scripts", required: false)
 
-
+            Chi se s tebe napit, sat
 
             <footer class="main-footer">
                 <!-- To the right -->
